[project]
name = "agno-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.15"
dependencies = [
    "agno>=2.5.13",
    "dotenv>=0.9.9",
    "groq>=1.1.2",
    "openai>=2.30.0",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.23",
    "yfinance>=1.2.0",
]
